log
Thu, Apr 17, 2025  9:38:24 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Fri, Apr 18, 2025  1:18:23 PM: 
 hashmap.c | 85 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 84 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
52a1b46
Fri, Apr 18, 2025  1:38:03 PM: 
 tests:  8|3
total_score: 40/70
525fba3
Fri, Apr 18, 2025  1:38:34 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
afe0128
Fri, Apr 18, 2025  1:55:10 PM: 
 hashmap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:176:10: error: unused variable 'originalCurrent' [-Werror=unused-variable]
     long originalCurrent = i;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
9a057d5
Fri, Apr 18, 2025  1:55:36 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:176:10: error: unused variable 'originalCurrent' [-Werror=unused-variable]
     long originalCurrent = i;
          ^~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
d92b4bc
Fri, Apr 18, 2025  1:55:42 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
66be336
